Google Analytics added

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FRJ1P7F6M4"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-FRJ1P7F6M4');
+	</script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Welcome to Greendale</title>
@@ -12,69 +21,90 @@
 </head>
 <body>
 	<a class="skip" href="#content-wrapper">Jump to Content</a>
-	<header>
-		<div>
-			<div class="logo">
-				<img src="imgs/crest.png" alt="">
-				<h1>Greendale <span class="hed">Community College</span></h1>
-			</div>
-			<button class="apply">Apply</button>
-		</div>
-		<nav class="pages">
-			<button class="menu-toggle">Menu Icon</button>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="student.html">Student Life</a></li>
-				<li><a href="academics.html">Academics</a></li>
-				<li><a href="admissions.html">Admissions</a></li>
-			</ul>
-			<!-- <div class="breadcrumbs"></div> -->
-			<hr class="no-css">
-		</nav>
-	</header>
-	
-	<div id="content-wrapper">
-		<div class="banner">
-			<img src="imgs/campuslife5.png">
-			<p>Welcome to Greendale</p>
-		</div>
-		<main id="main">
-			<h2>Our Mission</h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mauris metus, rutrum et nibh sed, tempus faucibus urna. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque nec nulla nisi. Duis pretium libero nec lectus pharetra, nec dignissim erat scelerisque. Curabitur hendrerit nisl tristique neque efficitur, nec gravida lorem eleifend. Aliquam eget purus vitae quam varius viverra. Fusce rhoncus enim porttitor elementum tristique. Morbi hendrerit lacus iaculis neque rhoncus, eget pulvinar magna iaculis. Mauris ac enim sagittis, fermentum quam at, congue elit.
-			</p>
 
-		</main>
-	</div>
-	<footer>
-		<hr class="no-css">
-		<nav class="social">
-			<ul>
-				<li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-				<li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-				<li><a href="https://instagram.com" target="_blank">Instagram</a></li>
-				<li><a href="https://youtube.com" target="_blank">Youtube</a></li>
-				<li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
-			</ul>
-		</nav>
-		<div class="meta-info">
-			<div>Greendale <span>Community College</span></div>
-			<address>
+		<header>
+			<div class="logo-wrap">
+				<div class="logo">
+					<img src="imgs/crest.png" alt="">
+					<h1>Greendale 
+						<div class="hed">Community</div>
+						<div class="hed">College</div>
+					</h1>
+				</div>
+				<button class="apply">Apply</button>
+			</div>
+			<nav class="pages">
+				<button class="menu-toggle"><i class="fas fa-bars"></i></button>
 				<ul>
-					<li><i class="fas fa-map-marker-alt"></i>Directions</li>
-					<li><i class="fas fa-phone"></i></i>Phone</li>
-					<li><i class="fas fa-envelope"></i>Email</li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About Us</a></li>
+					<li><a href="students.html">Student Life</a></li>
+					<li><a href="academics.html">Academics</a></li>
+					<li><a href="admissions.html">Admissions</a></li>
 				</ul>
-			</address>
+				<!-- <div class="breadcrumbs"></div> -->
+				<hr class="no-css">
+			</nav>
+		</header>
+		
+		<div id="content-wrapper">
+			<div class="banner">
+				<img src="imgs/campuslife5.png">
+				<p>Welcome to Greendale</p>
+			</div>
+			<div id="content">
+				<main id="main">
+					<h2>Our Mission</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mauris metus, rutrum et nibh sed, tempus faucibus urna. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque nec nulla nisi. Duis pretium libero nec lectus pharetra, nec dignissim erat scelerisque. Curabitur hendrerit nisl tristique neque efficitur, nec gravida lorem eleifend. Aliquam eget purus vitae quam varius viverra. Fusce rhoncus enim porttitor elementum tristique. Morbi hendrerit lacus iaculis neque rhoncus, eget pulvinar magna iaculis. Mauris ac enim sagittis, fermentum quam at, congue elit.
+					</p>
+
+				</main>
+			</div>
 		</div>
-		<div class="partners">
-			<ul>
-				<li>Partner 1</li>
-				<li>Partner 2</li>
-				<li>Partner 3</li>
-			</ul>
-		</div>
-		<p class="legal"><small>&copy; 2020 Sam Biegun</small></p>
-	</footer>
+
+		<footer>
+			<hr class="no-css">
+			<nav class="social">
+				<ul>
+					<li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+					<li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+					<li><a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+				</ul>
+			</nav>
+			<div class="meta-info">
+				<div>
+					Greendale
+					<div class="hed">Community</div>
+					<div class="hed">College</div>
+				</div>
+				<address>
+					<ul>
+						<li>
+							<i class="fas fa-map-marker-alt"></i><span>Directions</span>
+						</li>
+						<li>
+							<i class="fas fa-phone"></i><span>Phone</span>
+						</li>
+						<li>
+							<i class="fas fa-envelope"></i><span>Email</span>
+						</li>
+					</ul>
+				</address>
+			</div>
+			<div class="partners">
+				<ul>
+					<li><img src="imgs/cccs_logo.png" alt=""></li>
+					<li><img src="imgs/co_state_seal.png" alt=""></li>
+					<li><img src="imgs/cde.png" alt=""></li>
+				</ul>
+			</div>
+			<p class="legal"><small>&copy; 2020 Sam Biegun</small></p>
+		</footer>
+
+	<script src="main.js"></script>
+
 </body>
+</html>
