Created all pages.

--- a/public_html/about.html
+++ b/public_html/about.html
@@ -46,74 +46,45 @@
 				<hr class="no-css">
 			</nav>
 		</header>
-	
+		
 		<div id="content-wrapper">
 			<div class="banner">
-				<img src="imgs/campuslife9.jpg">
-				<p>Student Life</p>
+				<img src="imgs/courtyard.png">
+				<p>About Us</p>
 			</div>
-			<main id="main">
-				<h2>Our Mission</h2>
+			<div id="content">
+				<main id="main">
+					<h2>Our Mission</h2>
+					
+					<h3>Our History</h3>
+					<p>
+						The land upon which Greendale Community College would eventually be built was originally the site of an animal rendering plant. In 1974, inventor Russell Borchert purchased the grounds and founded a technological institute known as the "Greendale Computery College".  The city purchased the campus in the aftermath turning it into a traditional community college.  In 1977 the school finally got a roof and two years later in 1979 the Air Conditioning Repair school was established.
+					</p>
+					<p>
+						The current administration under Dean Craig Pelton instituted several incentive programs to improve enrollment. A new mascot was created to represent a diverse student body called the "Greendale Human Being". The school logo was also changed in 2010 to a symbol representing the school as a crossroads.
+					</p>
+					<h3>Our Mission</h3>
+					<p>
+						Greendale Community College makes available collegiate level education to adults of all ages, races, and creeds. Greendale prides itself in 5 categories which the school excels at:
+					</p>
+					<ul>
+						<li>Accesibility</li>
+						<li>Affordability</li>
+						<li>Advancemnet</li>
+						<li>Allegience</li>
+						<li>Availibility</li>
+					</ul>
 
-				<!-- Info graphs: list and flex -->
-				<h3>Quick Facts</h3>
-				<ul>
-					<li>
-						<i class="fas fa-laptop"></i>
-						20+ Clubs and Organizations
-					</li>
-					<li>
-						<i class="fas fa-handshake"></i>
-						1898 Student Body
-					</li>
-					<li>
-						<i class="fas fa-bed"></i>
-						60+ On-Campus Living Spaces
-					</li>
-				</ul>
+					<h3>Meet the Staff</h3>
+					<ul>
+						<li>Dean Craig Pelton<img src="imgs/staff6.jpg"></li>
+						<li>Vice Dean Robert Laybourne<img src="imgs/vice_dean.png"></li>
+					</ul>
 
-				<!-- <h3></h3> -->
-				<div>
-					<div>
-						Dances
-						<img src="imgs/gcc_dance1.jpg">
-						<img src="imgs/dance1.png">
-					</div>
-					<div>
-						Paintball
-						<img src="imgs/paintball.png">
-					</div>
-					<div>
-						Sports
-						<img src="imgs/football.jpg">
-					</div>
-
-					<div>
-						Student Media
-						<img src="imgs/campuslife4.png">
-						<img src="imgs/news.png">
-						<img src="imgs/news2.jpg">
-					</div>
-					<div>
-						Clubs
-						<img src="imgs/d_and_d.jpg">
-						<img src="imgs/students3.png">
-					</div>
-					<div>
-						Campus Life
-						<img src="imgs/students.jpg">
-						<img src="imgs/gcc_library.jpg">
-						<img src="imgs/gcc_library2.jpg">
-						<img src="imgs/statue.png">
-					</div>
-
-					</div>
-				</div>
-
-
-
-			</main>
+				</main>
+			</div>
 		</div>
+
 		<footer>
 			<hr class="no-css">
 			<nav class="social">
@@ -133,9 +104,15 @@
 				</div>
 				<address>
 					<ul>
-						<li><i class="fas fa-map-marker-alt"></i>Directions</li>
-						<li><i class="fas fa-phone"></i></i>Phone</li>
-						<li><i class="fas fa-envelope"></i>Email</li>
+						<li>
+							<i class="fas fa-map-marker-alt"></i><span>Directions</span>
+						</li>
+						<li>
+							<i class="fas fa-phone"></i><span>Phone</span>
+						</li>
+						<li>
+							<i class="fas fa-envelope"></i><span>Email</span>
+						</li>
 					</ul>
 				</address>
 			</div>
