--- a/public_html/academics.html
+++ b/public_html/academics.html
@@ -46,74 +46,78 @@
 				<hr class="no-css">
 			</nav>
 		</header>
-	
+		
 		<div id="content-wrapper">
 			<div class="banner">
-				<img src="imgs/campuslife9.jpg">
-				<p>Student Life</p>
+				<img src="imgs/spanish4.png">
+				<p>Academics</p>
 			</div>
-			<main id="main">
-				<h2>Our Mission</h2>
+			<div id="content">
+				<main id="main">
+					<h2>Our Mission</h2>
 
-				<!-- Info graphs: list and flex -->
-				<h3>Quick Facts</h3>
-				<ul>
-					<li>
-						<i class="fas fa-laptop"></i>
-						20+ Clubs and Organizations
-					</li>
-					<li>
-						<i class="fas fa-handshake"></i>
-						1898 Student Body
-					</li>
-					<li>
-						<i class="fas fa-bed"></i>
-						60+ On-Campus Living Spaces
-					</li>
-				</ul>
+					<!-- Info graphs: list and flex -->
+					<h3>Quick Facts</h3>
+					<ul>
+						<li>
+							<i class="fas fa-laptop"></i>
+							90+ Online Courses
+						</li>
+						<li>
+							<i class="fas fa-chalkboard-teacher"></i>
+							16:1 Student Teacher Ratio
+						</li>
+						<li>
+							<i class="fas fa-hand-holding-usd"></i>
+							70% Recieve Financial Aid
+						</li>
+					</ul>
 
-				<!-- <h3></h3> -->
-				<div>
-					<div>
-						Dances
-						<img src="imgs/gcc_dance1.jpg">
-						<img src="imgs/dance1.png">
-					</div>
-					<div>
-						Paintball
-						<img src="imgs/paintball.png">
-					</div>
-					<div>
-						Sports
-						<img src="imgs/football.jpg">
-					</div>
+					<!-- Programs -->
+					<h3>Programs</h3>
+					<ul>
+						<li>
+							Art
+							<img src="imgs/pottery.jpg">
+							<img src="imgs/arts.jpg">
+							<img src="imgs/glee_club.jpg">
+						</li>
+						<li>
+							Business, Economics, Humnanities, and Law
+							<img src="imgs/faculty.jpg">
+							<img src="imgs/campuslife2.png">
+							<img src="imgs/spanish1.jpg">
+						</li>
+						<li>
+							Science, Technology, Engineeting, and Math
+							<img src="imgs/gcc_class.png">
+							<img src="imgs/ladders.jpg">
+							<img src="imgs/adv_breath_holding.png">
+						</li>
+						<li>
+							Specialized Training
+							<img src="imgs/ac_repair.png">
+							<img src="imgs/ac_repair2.png">
+							<img src="imgs/ac_repair3.png">
+						</li>
+					</ul>
 
-					<div>
-						Student Media
-						<img src="imgs/campuslife4.png">
-						<img src="imgs/news.png">
-						<img src="imgs/news2.jpg">
-					</div>
-					<div>
-						Clubs
-						<img src="imgs/d_and_d.jpg">
-						<img src="imgs/students3.png">
-					</div>
-					<div>
-						Campus Life
-						<img src="imgs/students.jpg">
-						<img src="imgs/gcc_library.jpg">
-						<img src="imgs/gcc_library2.jpg">
-						<img src="imgs/statue.png">
-					</div>
+					<!-- Faculty -->
+					<!-- <h3>Meet the Staff</h3>
+					<ul>
+						<li>Dean Craig Pelton<img src="imgs/staff6.jpg"></li>
+						<li>Vice Dean Robert Laybourne<img src="imgs/vice_dean.png"></li>
+						<li>Senior Benjamen F. Chang<img src="imgs/chang.jpg"></li>
+						<li>Professor Michelle Slater<img src="imgs/slatter.jpg"></li>
+						<li>Dr. Ian Duncan<img src="imgs/dr_duncan.jpg"></li>
+						<li>Professor Eustice Whitman<img src="imgs/whitman.jpg"></li>
+						<li>Professor Sean Garrity<img src="imgs/staff4.jpg"></li>
+					</ul> -->
 
-					</div>
-				</div>
-
-
-
-			</main>
+				</main>
+			</div>
 		</div>
+
 		<footer>
 			<hr class="no-css">
 			<nav class="social">
@@ -133,9 +137,15 @@
 				</div>
 				<address>
 					<ul>
-						<li><i class="fas fa-map-marker-alt"></i>Directions</li>
-						<li><i class="fas fa-phone"></i></i>Phone</li>
-						<li><i class="fas fa-envelope"></i>Email</li>
+						<li>
+							<i class="fas fa-map-marker-alt"></i><span>Directions</span>
+						</li>
+						<li>
+							<i class="fas fa-phone"></i><span>Phone</span>
+						</li>
+						<li>
+							<i class="fas fa-envelope"></i><span>Email</span>
+						</li>
 					</ul>
 				</address>
 			</div>
