--- a/public_html/admissions.html
+++ b/public_html/admissions.html
@@ -46,74 +46,28 @@
 				<hr class="no-css">
 			</nav>
 		</header>
-	
+		
 		<div id="content-wrapper">
 			<div class="banner">
-				<img src="imgs/campuslife9.jpg">
-				<p>Student Life</p>
+				<img src="imgs/courtyard.png">
+				<p>Admissions</p>
 			</div>
-			<main id="main">
-				<h2>Our Mission</h2>
-
-				<!-- Info graphs: list and flex -->
-				<h3>Quick Facts</h3>
-				<ul>
-					<li>
-						<i class="fas fa-laptop"></i>
-						20+ Clubs and Organizations
-					</li>
-					<li>
-						<i class="fas fa-handshake"></i>
-						1898 Student Body
-					</li>
-					<li>
-						<i class="fas fa-bed"></i>
-						60+ On-Campus Living Spaces
-					</li>
-				</ul>
-
-				<!-- <h3></h3> -->
-				<div>
-					<div>
-						Dances
-						<img src="imgs/gcc_dance1.jpg">
-						<img src="imgs/dance1.png">
-					</div>
-					<div>
-						Paintball
-						<img src="imgs/paintball.png">
-					</div>
-					<div>
-						Sports
-						<img src="imgs/football.jpg">
-					</div>
-
-					<div>
-						Student Media
-						<img src="imgs/campuslife4.png">
-						<img src="imgs/news.png">
-						<img src="imgs/news2.jpg">
-					</div>
-					<div>
-						Clubs
-						<img src="imgs/d_and_d.jpg">
-						<img src="imgs/students3.png">
-					</div>
-					<div>
-						Campus Life
-						<img src="imgs/students.jpg">
-						<img src="imgs/gcc_library.jpg">
-						<img src="imgs/gcc_library2.jpg">
-						<img src="imgs/statue.png">
-					</div>
-
-					</div>
-				</div>
-
-
-
-			</main>
+			<div id="content">
+				<main id="main">
+					<h2>Our Mission</h2>
+					
+					<ul>
+						<li>Accesibility</li>
+						<li>Affordability</li>
+						<li>Advancemnet</li>
+						<li>Allegience</li>
+						<li>Availibility</li>
+					</ul>
+					
+				</main>
+			</div>
 		</div>
+
 		<footer>
 			<hr class="no-css">
 			<nav class="social">
@@ -133,9 +87,15 @@
 				</div>
 				<address>
 					<ul>
-						<li><i class="fas fa-map-marker-alt"></i>Directions</li>
-						<li><i class="fas fa-phone"></i></i>Phone</li>
-						<li><i class="fas fa-envelope"></i>Email</li>
+						<li>
+							<i class="fas fa-map-marker-alt"></i><span>Directions</span>
+						</li>
+						<li>
+							<i class="fas fa-phone"></i><span>Phone</span>
+						</li>
+						<li>
+							<i class="fas fa-envelope"></i><span>Email</span>
+						</li>
 					</ul>
 				</address>
 			</div>
