--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,11 +49,13 @@
 		
 		<div id="content-wrapper">
 			<div class="banner">
-				<img src="imgs/campuslife5.png">
+				<img src="imgs/gcc_campus1.jpg">
 				<p>Welcome to Greendale</p>
 			</div>
 			<div id="content">
 				<main id="main">
+
+					<i class="fas fa-award"></i>
 					<h2>Our Mission</h2>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mauris metus, rutrum et nibh sed, tempus faucibus urna. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque nec nulla nisi. Duis pretium libero nec lectus pharetra, nec dignissim erat scelerisque. Curabitur hendrerit nisl tristique neque efficitur, nec gravida lorem eleifend. Aliquam eget purus vitae quam varius viverra. Fusce rhoncus enim porttitor elementum tristique. Morbi hendrerit lacus iaculis neque rhoncus, eget pulvinar magna iaculis. Mauris ac enim sagittis, fermentum quam at, congue elit.
