--- a/public_html/about.html
+++ b/public_html/about.html
@@ -50,7 +50,7 @@
 		<div id="content-wrapper">
 			<div class="banner">
 				<img src="imgs/courtyard.png">
-				<p>About Us</p>
+				<h2>About Us</h2>
 			</div>
 			<div id="content">
 				<main id="main">
