--- a/public_html/academics.html
+++ b/public_html/academics.html
@@ -50,7 +50,7 @@
 		<div id="content-wrapper">
 			<div class="banner">
 				<img src="imgs/spanish4.png">
-				<p>Academics</p>
+				<h2>Academics</h2>
 			</div>
 			<div id="content">
 				<main id="main">
