--- a/public_html/admissions.html
+++ b/public_html/admissions.html
@@ -50,7 +50,7 @@
 		<div id="content-wrapper">
 			<div class="banner">
 				<img src="imgs/courtyard.png">
-				<p>Admissions</p>
+				<h2>Admissions</h2>
 			</div>
 			<div id="content">
 				<main id="main">
@@ -63,7 +63,7 @@
 						<li>Allegience</li>
 						<li>Availibility</li>
 					</ul>
-					
+
 				</main>
 			</div>
 		</div>
