--- a/public_html/index.html
+++ b/public_html/index.html
@@ -50,7 +50,7 @@
 		<div id="content-wrapper">
 			<div class="banner">
 				<img src="imgs/gcc_campus1.jpg">
-				<p>Welcome to Greendale</p>
+				<h2>Welcome to Greendale</h2>
 			</div>
 			<div id="content">
 				<main id="main">
