--- a/public_html/students.html
+++ b/public_html/students.html
@@ -50,7 +50,7 @@
 		<div id="content-wrapper">
 			<div class="banner">
 				<img src="imgs/campuslife9.jpg">
-				<p>Student Life</p>
+				<h2>Student Life</h2>
 			</div>
 			<main id="main">
 				<h2>Our Mission</h2>
