--- a/public_html/students.html
+++ b/public_html/students.html
@@ -53,8 +53,6 @@
 				<h2>Student Life</h2>
 			</div>
 			<main id="main">
-				<h2>Our Mission</h2>
-
 				<!-- Info graphs: list and flex -->
 				<h3>Quick Facts</h3>
 				<ul>
@@ -73,41 +71,20 @@
 				</ul>
 
 				<!-- <h3></h3> -->
-				<div>
-					<div>
-						Dances
-						<img src="imgs/gcc_dance1.jpg">
-						<img src="imgs/dance1.png">
-					</div>
-					<div>
-						Paintball
-						<img src="imgs/paintball.png">
-					</div>
-					<div>
-						Sports
-						<img src="imgs/football.jpg">
-					</div>
-
-					<div>
-						Student Media
-						<img src="imgs/campuslife4.png">
-						<img src="imgs/news.png">
-						<img src="imgs/news2.jpg">
-					</div>
-					<div>
-						Clubs
-						<img src="imgs/d_and_d.jpg">
-						<img src="imgs/students3.png">
-					</div>
-					<div>
-						Campus Life
-						<img src="imgs/students.jpg">
-						<img src="imgs/gcc_library.jpg">
-						<img src="imgs/gcc_library2.jpg">
-						<img src="imgs/statue.png">
-					</div>
-
-					</div>
+				<div class="gallery">
+					<div><img src="imgs/gcc_dance1.jpg" alt=""></div>
+					<div><img src="imgs/dance1.png" alt=""></div>
+					<div><img src="imgs/paintball.png" alt=""></div>
+					<div><img src="imgs/football.jpg" alt=""></div>
+					<div><img src="imgs/campuslife4.png" alt=""></div>
+					<div><img src="imgs/news.png" alt=""></div>
+					<div><img src="imgs/news2.jpg" alt=""></div>
+					<div><img src="imgs/d_and_d.jpg" alt=""></div>
+					<div><img src="imgs/students3.png" alt=""></div>
+					<div><img src="imgs/students.jpg" alt=""></div>
+					<div><img src="imgs/gcc_library.jpg" alt=""></div>
+					<div><img src="imgs/gcc_library2.jpg" alt=""></div>
+					<div><img src="imgs/statue.png" alt=""></div>
 				</div>
 
 
