--- a/public_html/index.html
+++ b/public_html/index.html
@@ -56,11 +56,22 @@
 				<main id="main">
 
 					<i class="fas fa-award"></i>
-					<h2>Our Mission</h2>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mauris metus, rutrum et nibh sed, tempus faucibus urna. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque nec nulla nisi. Duis pretium libero nec lectus pharetra, nec dignissim erat scelerisque. Curabitur hendrerit nisl tristique neque efficitur, nec gravida lorem eleifend. Aliquam eget purus vitae quam varius viverra. Fusce rhoncus enim porttitor elementum tristique. Morbi hendrerit lacus iaculis neque rhoncus, eget pulvinar magna iaculis. Mauris ac enim sagittis, fermentum quam at, congue elit.
-					</p>
-
+					<h3>Meet the Students</h3>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+					<h3>Meet the Faculty</h3>
+					<ul>
+						<li>Dean Craig Pelton<img src="imgs/staff6.jpg"></li>
+						<li>Vice Dean Robert Laybourne<img src="imgs/vice_dean.png"></li>
+						<li>Senior Benjamen F. Chang<img src="imgs/chang.jpg"></li>
+						<li>Dr. Ian Duncan<img src="imgs/dr_duncan.jpg"></li>
+						<li>Professor Eustice Whitman<img src="imgs/whitman.jpg"></li>
+						<li>Professor Sean Garrity<img src="imgs/staff4.jpg"></li>
+					</ul>
+					
 				</main>
 			</div>
 		</div>
